refactor: replace Arrays.asList with List.of for improved readability in tests